[package]
name = "kester"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
iced = "0.12.1"
iced_runtime = "0.12.1"
once_cell = "1.20.2"
winit = "0.30.5"
tray-item = "0.7"

[build-dependencies]
built = "0.7.5"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1"

[package.metadata.windows]
subsystem = "windows"
